[gd_scene load_steps=13 format=3 uid="uid://ctaq0epk1e340"]

[ext_resource type="Script" path="res://ui/replay.gd" id="1_xig34"]
[ext_resource type="Texture2D" uid="uid://y6npssa3umbx" path="res://assets/sunset.jpg" id="2_e0ak2"]
[ext_resource type="Script" path="res://actors/phone_operator.gd" id="3_i6d34"]
[ext_resource type="PackedScene" uid="uid://c76ybxdwy7mbk" path="res://actors/player_control.tscn" id="4_aw3ld"]
[ext_resource type="Script" path="res://actors/game_container.gd" id="5_a78io"]
[ext_resource type="PackedScene" uid="uid://rlxycfbs6rgr" path="res://actors/scene_board.tscn" id="6_6f3xm"]
[ext_resource type="PackedScene" uid="uid://dqa6kk2vyqay" path="res://actors/btch_server.tscn" id="7_6fcwy"]
[ext_resource type="Script" path="res://actors/replay_game.gd" id="8_bjul1"]
[ext_resource type="Texture2D" uid="uid://bdn3oicjeje2r" path="res://assets/triangle_back.png" id="8_jk7vq"]
[ext_resource type="Texture2D" uid="uid://b63rv6fvdn1j1" path="res://assets/triangle.png" id="9_n120w"]
[ext_resource type="PackedScene" uid="uid://b7togtnxg15ho" path="res://ui/menu_ingame.tscn" id="9_p1fy2"]
[ext_resource type="PackedScene" uid="uid://b81wxo2et2dpp" path="res://ui/navigation_layer.tscn" id="10_a2wts"]

[node name="Replay" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_xig34")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -600.0
offset_right = 400.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_e0ak2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreviousMoveButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("8_jk7vq")
flat = true
expand_icon = true

[node name="Control" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="NextMoveButton" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("9_n120w")
flat = true
expand_icon = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("3_i6d34")

[node name="GameTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Game "
horizontal_alignment = 1

[node name="TopPlayerControl" parent="CenterContainer/VBoxContainer" instance=ExtResource("4_aw3ld")]
custom_minimum_size = Vector2(320, 40)
layout_mode = 2
player_area_color = 0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(320, 320)
layout_mode = 2
script = ExtResource("5_a78io")

[node name="CanvasLayer" type="CanvasLayer" parent="CenterContainer/VBoxContainer/AspectRatioContainer"]
offset = Vector2(90, 90)
transform = Transform2D(1, 0, 0, 1, 90, 90)

[node name="Game" type="Node2D" parent="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer"]
script = ExtResource("8_bjul1")

[node name="SceneBoard" parent="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game" node_paths=PackedStringArray("btch_server") instance=ExtResource("6_6f3xm")]
btch_server = NodePath("../BtchServer")

[node name="BtchServer" parent="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game" instance=ExtResource("7_6fcwy")]

[node name="BottomPlayerControl" parent="CenterContainer/VBoxContainer" instance=ExtResource("4_aw3ld")]
custom_minimum_size = Vector2(320, 40)
layout_mode = 2
player_name = "bar"
player_area_color = 1

[node name="MenuLayer" type="CanvasLayer" parent="."]
visible = false

[node name="MenuIngame" parent="MenuLayer" instance=ExtResource("9_p1fy2")]

[node name="NavigationLayer" parent="." instance=ExtResource("10_a2wts")]

[connection signal="pressed" from="HBoxContainer/PreviousMoveButton" to="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game" method="_on_previous_move_button_pressed"]
[connection signal="pressed" from="HBoxContainer/NextMoveButton" to="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game" method="_on_next_move_button_pressed"]
[connection signal="black_username_update" from="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game/BtchServer" to="CenterContainer/VBoxContainer/TopPlayerControl" method="_set_label_text"]
[connection signal="game_joined" from="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game/BtchServer" to="CenterContainer/VBoxContainer" method="_on_btch_server_game_joined"]
[connection signal="move_accepted" from="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game/BtchServer" to="." method="_on_btch_server_move_accepted"]
[connection signal="move_accepted" from="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game/BtchServer" to="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game/SceneBoard" method="_on_btch_server_move_accepted"]
[connection signal="turn_changed" from="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game/BtchServer" to="CenterContainer/VBoxContainer/TopPlayerControl" method="_on_btch_server_turn_changed"]
[connection signal="turn_changed" from="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game/BtchServer" to="CenterContainer/VBoxContainer/BottomPlayerControl" method="_on_btch_server_turn_changed"]
[connection signal="white_username_update" from="CenterContainer/VBoxContainer/AspectRatioContainer/CanvasLayer/Game/BtchServer" to="CenterContainer/VBoxContainer/BottomPlayerControl" method="_set_label_text"]
[connection signal="back_pressed" from="NavigationLayer" to="." method="_on_navigation_layer_back_pressed"]
[connection signal="menu_pressed" from="NavigationLayer" to="." method="_on_navigation_layer_menu_pressed"]
